--- a/Cryptography.ipynb
+++ b/Cryptography.ipynb
@@ -15,7 +15,13 @@
     "| [Computational indistinguishability (asymptotic)](#Computational-indistinguishability-%28asymptotic%29) | Week 2, lecture 3 |\n",
     "| [Uniform distribution](#Uniform-distribution) | Week 2, lecture 4 |\n",
     "| [Pseudorandomness (concrete)](#Pseudorandomness-%28concrete%29) | Week 2, lecture 4 |\n",
-    "| [Pseudorandomness (asymptotic)](#Pseudorandomness-%28asymptotic%29) | Week 2, lecture 4 |"
+    "| [Pseudorandomness (asymptotic)](#Pseudorandomness-%28asymptotic%29) | Week 2, lecture 4 |\n",
+    "| [Pseudorandom generator](#Pseudorandom-generator) | Week 2, lecture 5 |\n",
+    "| [Pseudo one-time pad](#Pseudo-one-time-pad) | Week 2, lecture 6 |\n",
+    "| [CPA security](#CPA-security) | Week 3, lecture 1 |\n",
+    "| [Keyed function](#Keyed-function) | Week 3, lecture 2 |\n",
+    "| [Pseudorandom function](#Pseudorandom-function) | Week 3, lecture 2 |\n",
+    "| [Pseudorandom permutations](#Pseudorandom-permutations) | Week 3, lecture 2 |"
    ]
   },
   {
@@ -179,6 +185,48 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Keyed function\n",
+    "\n",
+    "* Let $F: \\{0,1\\}^{*} * \\{0,1\\}^{*} \\rightarrow \\{0,1\\}^{*}$ be an efficiently computable function\n",
+    "  * Define $F_{k}(x) = F(k,x)$; $k$ - is the key.\n",
+    "* Assume $F$ is _length preserving_: $F(k,x)$ only defined if $\\lvert k \\rvert = \\lvert x \\rvert$, in which case $\\lvert F(k,x) \\rvert = \\lvert k \\rvert = \\lvert x \\rvert$\n",
+    "* Choosing uniform $k \\in \\{0,1\\}^n$ is equivalent to choosing function $F_{k}: \\{0,1\\}^{n} \\rightarrow \\{0,1\\}^{n}$\n",
+    "  * i.e. $F$ defines a distibution over functions in $Func_n$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pseudorandom function\n",
+    "\n",
+    "* $F$ is pseudorandom function if $F_k$, for uniform key $k \\in \\{0,1\\}^n$ is indistinguishable from a uniform function $f \\in Func_n$\n",
+    "\n",
+    "For all poly-time $D$:\n",
+    "$$ \\lvert \\Pr_{k \\leftarrow \\{0,1\\}^n}\\left[D^{F_{k}( \\cdot )}=1 \\right] - \\Pr_{f \\leftarrow Func_{n}} \\left[D^{f( \\cdot )}=1 \\right] \\rvert \\leq \\varepsilon (n)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### Pseudorandom permutations\n",
+    " \n",
+    " * Let $F$ be a length-preserving, keyed function\n",
+    " * $F$ is _keyed permutation_ if\n",
+    "   * $F_k$ is a bijection for every $k$\n",
+    "   * $F_{k}^{-1}$ is efficiently computable (where $F_{k}^{-1}(F_{k}(x)) = x$)\n",
+    " * $F$ is _pseudorandom permutation_ if $F_k$, for uniform key $k \\in \\{0,1\\}^n$ is indistinguishable from a uniform permutation $f \\in Perm_n$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
@@ -198,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
