Rest of week 3 and week 4

--- a/Cryptography.ipynb
+++ b/Cryptography.ipynb
@@ -21,7 +21,11 @@
     "| [CPA security](#CPA-security) | Week 3, lecture 1 |\n",
     "| [Keyed function](#Keyed-function) | Week 3, lecture 2 |\n",
     "| [Pseudorandom function](#Pseudorandom-function) | Week 3, lecture 2 |\n",
-    "| [Pseudorandom permutations](#Pseudorandom-permutations) | Week 3, lecture 2 |"
+    "| [Pseudorandom permutations](#Pseudorandom-permutations) | Week 3, lecture 2 |\n",
+    "| [CPA secure encryption](#CPA-secure-encryption) | Week 3, lecture 3 |\n",
+    "| [Block cipher modes of operation](#Block-cipher-modes-of-operation) | Week 3, lecture 4 |\n",
+    "| [Message authentication code](#Message-authentication-code)| Week 4, lecture 1 |\n",
+    "| [Mac security definition](#Mac-security-definition) | Week 4, lecture 1|"
    ]
   },
   {
@@ -221,13 +225,111 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "source": [
+    "### CPA-secure encryption\n",
+    "\n",
+    "* Let $F$ be a keyed function\n",
+    "* $Gen(1^n)$: choose a uniform key $k \\in \\{0,1\\}^n$\n",
+    "* $Enk_{k}(m)$, for $\\lvert m \\rvert = \\lvert k \\rvert$:\n",
+    "  * Choose uniform $r \\in \\{0,1\\}^n$\n",
+    "  * Output ciphertext $< r, F_{k}(r) \\oplus m >$\n",
+    "* $Dec_{k}(< c1,c2 >)$: output $c_{2} \\oplus F_{k}(c_{1})$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CPA-security analysis\n",
+    "\n",
+    "* Let $\\mu(n) = \\Pr\\left[PrivCPA_{Adv,\\Pi}(n)=1\\right]$\n",
+    "* Let $q(n)$ be a bound on the number of encryption queries made by attacker\n",
+    "\n",
+    "* If $f=F_k$ for uniform $k$ then the view of $Adv$ is exactly as in $PrivCPA_{Adv,\\Pi}(n)$\n",
+    "\n",
+    "$$ \\Rightarrow \\Pr_{k \\leftarrow \\{0,1\\}^{n}}\\left[D^{F_{k}(\\cdot)}=1\\right] = \\Pr\\left[PrivCPA_{Adv,\\Pi}(n)=1\\right] = \\mu(n)$$\n",
+    "\n",
+    "* If $f$ is uniform, there are 2 sub-cases:\n",
+    "  * $r^*$ was queried other time (even __Repeat__)\n",
+    "  * $r^*$ was not queried some other time\n",
+    "\n",
+    "$$ \\Pr_{f}\\left[D^{f( \\cdot )} = 1 \\right] \\leq \\Pr_{f}\\left[D^{f( \\cdot )} = 1 | \\lnot Repeat \\right] + \\Pr\\left[ Repeat \\right]$$\n",
+    "$$\\Pr\\left[ Repeat \\right] \\leq q(n) / 2^{n}$$\n",
+    "\n",
+    "* Since $F$ is pseudorandom\n",
+    "\n",
+    "$$ \\Rightarrow \\lvert \\mu (n) - \\Pr_{f}\\left[D^{f( \\cdot )} = 1 \\right] \\rvert \\leq \\varepsilon (n) $$\n",
+    "$$ \\Rightarrow \\mu (n) \\leq \\Pr_{f}\\left[D^{f( \\cdot )} = 1 \\right] + \\varepsilon (n) \\leq \\frac 1 2 + \\frac {q(n)} {2^n} + \\varepsilon (n)$$\n",
+    "\n",
+    "* For any polynomial q, the term $\\frac {q(n)} {2^n}$ is negligible\n",
+    "\n",
+    "$$\\Rightarrow \\Pr\\left[PrivCPA_{Adv,\\Pi}(n)=1\\right] = \\mu(n) \\leq \\frac 1 2 + \\varepsilon'(n)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Block cipher modes of operation\n",
+    "\n",
+    "##### CTR mode\n",
+    "* $Enc_{k}(m1, ... , m_t)$\n",
+    "  * Choose $ctr \\leftarrow \\{0, 1\\}^{n}$, set $c_{0}=ctr$\n",
+    "  * For $i=1$ to $t$:\n",
+    "    * $c_i = m_i \\oplus F_k(ctr + i)$\n",
+    "  * Output $c_0, c_1, ... , c_t$\n",
+    "\n",
+    "##### CBC mode\n",
+    "* $Enc_{k}(m1, ... , m_t)$\n",
+    "  * Choose random $c_0 \\leftarrow \\{0, 1\\}^n$ (also called the IV)\n",
+    "  * For $i=1$ to $t$:\n",
+    "    * $c_i = F_k(m_i \\oplus c_{i-1})$\n",
+    "  * Output $c_0, c_1, ... , c_t$\n",
+    "* Decryption requires F to be invertable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Message authentication code\n",
+    "\n",
+    "* $Gen$: takes as input $1^n$; outputs $k$ (assume $ \\lvert k \\rvert \\geq n$)\n",
+    "* $Mac$: takes as input key $k$ and message $m \\in \\{0,1\\}^*$; outputs tag $t$\n",
+    "\n",
+    "$$ t:= Mak_k(m) $$\n",
+    "\n",
+    "* $Vrfy$: takes key $k$, message $m$, and tag $t$ as input; outputs 1 (\"accept\") or 0 (\"reject\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mac security definition\n",
+    "\n",
+    "* Fix $A, \\Pi$\n",
+    "* Define randomized experiment $Forge_{A, \\Pi}(n)$:\n",
+    "  * $k \\leftarrow Gen(1^n)$\n",
+    "  * $A$ interacts with an oracle $Mac_k(\\cdot)$; let $M$ be the set of messages submitted to this oracle\n",
+    "  * $A$ outputs $(m, t)$\n",
+    "  * $A$ succeeds, and the experiment evaluates to 1, if $Vrfy_k(m,t)=1$ and $m \\notin M$\n",
+    "\n",
+    "* $\\Pi$ is _secure_ if for all PPT attackers $A$, there is a negligible function $\\varepsilon$ such that\n",
+    "\n",
+    "$$ \\Pr\\left[Forge_{A, \\Pi}(n)=1\\right] \\leq \\varepsilon(n) $$"
+   ]
   }
  ],
  "metadata": {
